# ICMA

./: README.md
CPP/CAPBasedSpeckleTracking/src/: CMISSDICOMEncapsulator.cpp  CMISSDICOMEncapsulator.h  CMakeLists.txt  Coordinate3D.h  DCMTKUtils.cpp  DICOMInputManager.cpp  DICOMInputManager.h  LVHeartMeshModel.cpp  LVHeartMeshModel.h  MarkerPlotter.cpp  MarkerPlotter.h  MotionEstimator.cpp  MotionEstimator.h  Plane.h  Point3D.h  Release_Notes.txt  SegmentationAndFittingException.h  SpeckleDetector.cpp  SpeckleDetector.h  SpeckleLibrary.cpp  SpeckleLibrary.h  TimeVaryingSmoother.cpp  TimeVaryingSmoother.h  URLFileDownloader.cpp  Vector3D.h  XMLInputReader.cpp  XMLInputReader.h  XMLSerialiser.cpp  XMLSerialiser.h  basis.h  filesystem.cpp  filesystem.h  globalhermiteparamexelem.h  globalmapbeziertohermite.dat.h  globalsmoothperframematrix.dat.h  gmmfactory.h  heart.h  help.h  lvmeshbasedspeckletracking.h  main.cxx  (+5 more)
CPP/CAPBasedSpeckleTracking/src/Graphs/: CAPBasedSpeckleTrackingAllDependencies.dot  CAPBasedSpeckleTrackingCallDependencies.dot  CAPBasedSpeckleTrackingSetsDependencies.dot  CAPBasedSpeckleTrackingUML.dot  CAPBasedSpeckleTrackingUseDependencies.dot
CPP/CAPBasedSpeckleTracking/src/Testing/: TCH.xml
CPP/CAPBasedSpeckleTracking/src/compress/: LibArchiveWrapper.cpp  LibArchiveWrapper.h
CPP/DICOMSERIESTOMOVIE/src/: CMakeLists.txt  Coordinate3D.h  DICOMImage.cpp  DICOMImage.h  DICOMInputManager.cpp  DICOMInputManager.h  DICOMProperties.h  MovieMaker.cpp  MovieMaker.h  Point3D.h  Release_Notes.txt  URLFileDownloader.cpp  URLFileDownloader.h  Vector3D.h  XMLInputReader.cpp  XMLInputReader.h  main.cxx
CPP/DICOMSERIESTOMOVIE/src/Graphs/: DICOMSERIESTOMOVIEAllDependencies.dot  DICOMSERIESTOMOVIECallDependencies.dot  DICOMSERIESTOMOVIEUMLDiagram.dot  DICOMSERIESTOMOVIEUsesDependencies.dot
CPP/DICOMSERIESTOMOVIE/src/Testing/: test.xml
CPP/DICOMSERIESTOMOVIE/src/Testing/SeriesDataAll/: 2chIM_0061  2chIM_0061 (10)  2chIM_0061 (11)  2chIM_0061 (12)  2chIM_0061 (13)  2chIM_0061 (14)  2chIM_0061 (15)  2chIM_0061 (16)  2chIM_0061 (17)  2chIM_0061 (18)  2chIM_0061 (19)  2chIM_0061 (2)  2chIM_0061 (20)  2chIM_0061 (21)  2chIM_0061 (22)  2chIM_0061 (23)  2chIM_0061 (24)  2chIM_0061 (25)  2chIM_0061 (26)  2chIM_0061 (27)  2chIM_0061 (28)  2chIM_0061 (29)  2chIM_0061 (3)  2chIM_0061 (30)  2chIM_0061 (31)  2chIM_0061 (32)  2chIM_0061 (33)  2chIM_0061 (34)  2chIM_0061 (35)  2chIM_0061 (36)  2chIM_0061 (37)  2chIM_0061 (38)  2chIM_0061 (39)  2chIM_0061 (4)  2chIM_0061 (40)  2chIM_0061 (41)  2chIM_0061 (42)  2chIM_0061 (43)  2chIM_0061 (44)  2chIM_0061 (45)  (+326 more)
CPP/FittingRefinedLVModel/src/: BundleToDICOMException.cpp  BundleToDICOMException.h  CAPMeshTopologyHelper.cpp  CAPMeshTopologyHelper.h  CMakeLists.txt  Coordinate3D.h  CoordinateTransformer.h  LVChamberCircle.cpp  LVChamberCircle.h  LVHeartMesh.cpp  LVHeartMesh.h  LevelSet.h  LongAxisFitting.cpp  LongAxisFitting.h  LongAxisRegulariser.cpp  LongAxisRegulariser.h  MeshTopology.h  NormalLVMesh.cpp  NormalLVMesh.h  Point3D.h  Release_Notes.txt  SAXBasedCoordinateTransformer.cpp  SAXBasedCoordinateTransformer.h  ShortAxisFitting.cpp  ShortAxisFitting.h  StrainMeasures.cpp  StrainMeasures.h  TorsionFitting.cpp  TorsionFitting.h  Vector3D.h  VolumeRegularizer.cpp  VolumeRegularizer.h  WallSegment.h  XMLInputReader.cpp  XMLInputReader.h  XMLSerialiser.cpp  XMLSerialiser.h  debug.h  humandtifibre.h  main.cpp  (+3 more)
CPP/FittingRefinedLVModel/src/Graphs/: FittingRefinedLVModelAllDependencies.dot  FittingRefinedLVModelCallDependecies.dot  FittingRefinedLVModelSetsDependecies.dot  FittingRefinedLVModelUMLClassDiagram.dot  FittingRefinedLVModelUseDependecies.dot
CPP/FittingRefinedLVModel/src/Testing/: S2FEM.xml
CPP/LVModelBasedMRIModelFitting/src/: ActiveContourSegmentation.h  ActiveContourSegmentation.hxx  CMISSDICOMEncapsulator.cpp  CMISSDICOMEncapsulator.h  CMakeLists.txt  ImageFileReader.h  ImageFileReader.hxx  ImageThresholder.h  ImageThresholder.hxx  LVChamberRadius.cpp  LVChamberRadius.h  MarkerPlotter.h  MarkerPlotter.hxx  Plane.h  Point3D.h  RCMeshFitting.cpp  RCMeshFitting.h  RegionOfInterest.h  RegionOfInterest.hxx  Release_Notes.txt  ThresholdBasedLongAxisBoundaryDetector.h  ThresholdBasedLongAxisBoundaryDetector.hxx  ThresholdBasedShortAxisBoundaryDetector.h  ThresholdBasedShortAxisBoundaryDetector.hxx  URLFileDownloader.cpp  URLFileDownloader.h  Vector3D.h  WallSegment.h  XMLInputReader.cpp  XMLInputReader.h  main.cxx  refinedrcheart.h  tinyxml2.cpp  tinyxml2.h
CPP/LVModelBasedMRIModelFitting/src/CAP/: LVHeartMeshModel.cpp  LVHeartMeshModel.h  SinglePlaneLVHeartMeshModel.cpp  SinglePlaneLVHeartMeshModel.h  basis.h  debug.h  globalhermiteparamexelem.cpp  globalhermiteparamexelem.h  globalmapbeziertohermite.dat.cpp  globalmapbeziertohermite.dat.h  globalsmoothperframematrix.dat.cpp  globalsmoothperframematrix.dat.h  globalsmoothtvmatrix.dat.h  gmmfactory.cpp  gmmfactory.h  heart.cpp  heart.h  prior.dat.cpp  prior.dat.h  solverlibraryfactory.h  timesmoother.cpp  timesmoother.h  timevaryingprior.dat.h  vnlfactory.h
CPP/LVModelBasedMRIModelFitting/src/Graphs/: LVModelBasedMRIModelFittingAllDependencies.dot  LVModelBasedMRIModelFittingCallDependencies.dot  LVModelBasedMRIModelFittingSetsDependencies.dot  LVModelBasedMRIModelFittingUMLDiagram.dot  LVModelBasedMRIModelFittingUsesDependencies.dot
CPP/LVModelBasedMRIModelFitting/src/Testing/: test.xml
CPP/MRIModelStrainMeasures/src/: CMakeLists.txt  Coordinate3D.h  LVChamberCircle.cpp  LVChamberCircle.h  LVChamberRadius.cpp  LVChamberRadius.h  LVMyocardialVolume.cpp  LVMyocardialVolume.h  Release_Notes.txt  StrainMeasures.cpp  StrainMeasures.h  Vector3D.h  humandtifibre.h  main.cxx  tinyxml2.h
CPP/MRIModelStrainMeasures/src/Graphs/: MRIModelStrainMeasuresAllDependencies.dot  MRIModelStrainMeasuresCallDependencies.dot  MRIModelStrainMeasuresSetsDependencies.dot  MRIModelStrainMeasuresUMLDiagram.dot  MRIModelStrainMeasuresUsesDependencies.dot
CPP/MRIModelStrainMeasures/src/Testing/: MRIFIT.xml
J2EE/JBOSSInstallation/: .project  InstallationInstuctions.txt
(+471 files in other folders)
